objects/Survey_Question__c.object
<CustomObject>
    <description>Custom Survey_Question__c object that allows more customization than the native Salesforce Surveys solution. The Survey Question object represents an instance of a question that is presented to a survey respondent as part of a Survey. Every Survey Question record relates to a Survey record.</description>
    <label>Survey Question</label>
    <nameField>
        <label>Survey Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Looks up to the Survey this Survey Question relates to.</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsLegacy__c</fullName>
        <description>Used in survey response record triggered flow. If the survey question legacy Id is blank, then IsLegacy = true.</description>
        <formula>ISBLANK(Legacy_SurveyQuestion_Id__c)</formula>
        <label>IsLegacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <description>The data type of the survey question.</description>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>FreeText</fullName>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>RadioButton</fullName>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
                <value>
                    <fullName>ShortText</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Question_Text__c</fullName>
        <description>The name of the Survey Question record is truncated at 255 characters. This field stores the full question text, up to 32,768 characters. This is the text that should be displayed to the end survey respondent when taking a survey.</description>
        <label>Full Question Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>French_Question_Text__c</fullName>
        <description>Full Question Text - French Translation</description>
        <label>French Question Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_SurveyQuestion_Id__c</fullName>
        <description>Before the custom Survey__c object was built, Salesforce Surveys were in use. This field stores the legacy  Id for the corresponding, historical Salesforce Surveys SurveyQuestion record.</description>
        <externalId>true</externalId>
        <label>Legacy SurveyQuestion Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Survey_Version_Id__c</fullName>
        <description>Before the custom Survey__c object was built, Salesforce Surveys were in use. This field stores the legacy Id for the corresponding, historical Salesforce Survey Version record.</description>
        <label>Legacy Survey Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>